--- a/Client/Components/Public/Shared/Navbar.razor
+++ b/Client/Components/Public/Shared/Navbar.razor
@@ -1,5 +1,43 @@
 ﻿<h3>Navbar</h3>
 
-@code {
+@code
+{
+    /*URI = Uniform Resource Identifier*/
+    //public and CamelCase becouse c# properties are methods
+    [Inject] public NavigationManager NavigationManager { get; set; }
 
+    private const string HomePageUri = "/";
+    private const string BlogPageUri = "/blog";
+
+    private bool IsPageActive(string pageToCheckUri)
+    {
+        //Skip(3) to remove https://domainname/
+
+        string[] currentUriSplitBetweenSlashes = NavigationManager.Uri.Split('/').Skip(3).ToArray();
+
+        if (pageToCheckUri == HomePageUri)
+        {
+            if(currentUriSplitBetweenSlashes.Last().Length == 0)
+            {
+                return true;
+            }
+        }
+        else
+        {
+            string[] pageToCheckUriSplitBetweenSlashes =  pageToCheckUri.Split('/').Skip(1).ToArray();
+
+            foreach (string currentUriPart in currentUriSplitBetweenSlashes)
+            {
+                foreach(string pageToCheckUriPart in pageToCheckUriSplitBetweenSlashes)
+                {
+                    if (pageToCheckUriPart == currentUriPart)
+                    {
+                        return true;
+                    }
+                }
+            }
+        }
+        //If the code gets here pageToCheckUri is not the active page. So return false.
+        return false;
+    }
 }
