--- a/Client/Pages/Public/Index.razor
+++ b/Client/Pages/Public/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 
 
-<Client.Components.Public.Shared.Navbar/>
+<Client.Components.Public.Shared.Navbar />
 
 <main class="d-flex flex-column w-100 min-vh-90 justify-content-center align-items-center overflow-auto bg-motherboard-dev">
     <div class="container g-0">
@@ -25,3 +25,5 @@
         </div>
     </div>
 </main>
+
+<Client.Components.Public.Shared.Footer/>
