--- a/Client/Pages/Public/Blog.razor
+++ b/Client/Pages/Public/Blog.razor
@@ -1,11 +1,66 @@
 ﻿@page "/blog"
 
-<Client.Components.Public.Shared.Navbar/>
+<Client.Components.Public.Shared.Navbar />
 
-<h3>Blog</h3>
+<main class="container min-vh-90 py-5">
+    <div class="row">
+        <div class="col">
+            <h1 class="my-3">Blog</h1>
+            <p>Click a category cart to view its blog posts.</p>
 
-<Client.Components.Public.Shared.Footer/>
-@code {
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card shadow mb-2">
+                        <img src="/assets/img/other/placeholder.jpg" class="cart-img-top" alt="Category thumbnail image">
+                        <div class="card-body">
+                            <h3 class="card-title">Category name</h3>
+                            <p class="card-text">Category description</p>
+                        </div>
+                        <a href="/" class="btn btn-primary stretched-link">View posts</a>
+                    </div>
+                </div>
 
-}
- 
+                <div class="col-md-4">
+                    <div class="card shadow mb-2">
+                        <img src="/assets/img/other/placeholder.jpg" class="cart-img-top" alt="Category thumbnail image">
+                        <div class="card-body">
+                            <h3 class="card-title">Category name</h3>
+                            <p class="card-text">Category description</p>
+                        </div>
+                        <a href="/" class="btn btn-primary stretched-link">View posts</a>
+                    </div>
+                </div>
+
+
+                <div class="col-md-4">
+                    <div class="card shadow mb-2">
+                        <img src="/assets/img/other/placeholder.jpg" class="cart-img-top" alt="Category thumbnail image">
+                        <div class="card-body">
+                            <h3 class="card-title">Category name</h3>
+                            <p class="card-text">Category description</p>
+                        </div>
+                        <a href="/" class="btn btn-primary stretched-link">View posts</a>
+                    </div>
+                </div>
+
+
+                <div class="col-md-4">
+                    <div class="card shadow mb-2">
+                        <img src="/assets/img/other/placeholder.jpg" class="cart-img-top" alt="Category thumbnail image">
+                        <div class="card-body">
+                            <h3 class="card-title">Category name</h3>
+                            <p class="card-text">Category description</p>
+                        </div>
+                        <a href="/" class="btn btn-primary stretched-link">View posts</a>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+</main>
+
+
+<Client.Components.Public.Shared.Footer />
+
