--- a/Client/App.razor
+++ b/Client/App.razor
@@ -6,7 +6,11 @@
     <NotFound>
         <PageTitle>Not found</PageTitle>
         <LayoutView Layout="@typeof(MainLayout)">
-            <p role="alert">Sorry, there's nothing at this address.</p>
+            <main class="d-flex flex-column min-vh-100 justify-content-center align-items-center">
+                <h1 class="mb-3">Sorry there is nothing to show...</h1>
+                <h1 class="f-size-3"><i class="far fa-frown"></i></h1>
+                <a href="/" class="h1">Back to home</a>
+            </main>
         </LayoutView>
     </NotFound>
 </Router>
