Scaffolding out the pages

--- a/Client/Components/Public/Shared/Navbar.razor
+++ b/Client/Components/Public/Shared/Navbar.razor
@@ -51,7 +51,7 @@
 
     private const string HomePageUri = "/";
     private const string SkillsPageUri = "/skills";
-    private const string PortfolioPageUri = "/portfoltio";
+    private const string PortfolioPageUri = "/portfolio";
     private const string BlogPageUri = "/blog";
     private const string AboutPageUri = "/about";
     private const string ContactPageUri = "/contact";
