--- a/Client/Pages/Public/Contact.razor
+++ b/Client/Pages/Public/Contact.razor
@@ -2,9 +2,20 @@
 
 <Client.Components.Public.Shared.Navbar />
 
-<h3>Contact</h3>
+<main class="container min-vh-90 py-md-5">
+    <div class="row p-4 mt-md-5 shadow-no-hover">
+        <div class="col">
+            <h1 class="mb-4">Contact</h1>
+            <p class="mb-5">
+                My preferred form of contact is via email.
+                I usually replay with 24 hours.
+            </p>
+            <a href="mailto:johndoe@mail.com" class="h3">johndoe@mail.com</a>
+        </div>
+    </div>
+</main>
 
-<Client.Components.Public.Shared.Footer/>
+<Client.Components.Public.Shared.Footer />
 @code {
 
 }
